// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OnboardingPresentation should not render modal if the onboarding has already been done 1`] = `
<Modal
  hasBackground={true}
  isActive={false}
>
  <div
    className="box"
  >
    <h1
      className="title is-2 has-text-primary is-uppercase has-text-centered"
    >
      Your new wallet is now active
    </h1>
    <div
      className="columns is-vcentered"
    >
      <div
        className="column"
      >
        <div
          className="content has-text-grey-lighter is-size-4"
        >
          <p>
            Buy Kinesis from the exchange and store it in your wallet.
          </p>
          <p>
            Kinesis is the world's most stable currency, backed 1:1 against gold (KAU) and silver (KAG) bullion.
          </p>
          <a
            className="is-link is-size-6"
            href="https://youtu.be/moDBJCemGTM"
            target="_blank"
          >
            Learn more
          </a>
        </div>
      </div>
      <div
        className="column"
      >
        <figure
          className="image is-4by3"
        >
          <img
            className=""
            src="test-file-stub"
          />
        </figure>
      </div>
    </div>
    <div
      className="field is-grouped is-grouped-right"
    >
      <div
        className="control"
      >
        <button
          className="button is-primary"
          onClick={[Function]}
        >
          OK
        </button>
      </div>
    </div>
  </div>
</Modal>
`;

exports[`OnboardingPresentation should render correctly 1`] = `
<Modal
  hasBackground={true}
  isActive={true}
>
  <div
    className="box"
  >
    <h1
      className="title is-2 has-text-primary is-uppercase has-text-centered"
    >
      Your new wallet is now active
    </h1>
    <div
      className="columns is-vcentered"
    >
      <div
        className="column"
      >
        <div
          className="content has-text-grey-lighter is-size-4"
        >
          <p>
            Buy Kinesis from the exchange and store it in your wallet.
          </p>
          <p>
            Kinesis is the world's most stable currency, backed 1:1 against gold (KAU) and silver (KAG) bullion.
          </p>
          <a
            className="is-link is-size-6"
            href="https://youtu.be/moDBJCemGTM"
            target="_blank"
          >
            Learn more
          </a>
        </div>
      </div>
      <div
        className="column"
      >
        <figure
          className="image is-4by3"
        >
          <img
            className=""
            src="test-file-stub"
          />
        </figure>
      </div>
    </div>
    <div
      className="field is-grouped is-grouped-right"
    >
      <div
        className="control"
      >
        <button
          className="button is-primary"
          onClick={[Function]}
        >
          OK
        </button>
      </div>
    </div>
  </div>
</Modal>
`;
